fix: pic height calc & page styles

--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -168,7 +168,7 @@
 @media (orientation: portrait) and (max-width: 1024px) {
   .pic-container {
     width: auto;
-    padding: 0 24px;
+    padding: 0 24px 32px 24px;
     .pic-close {
       display: none;
     }
@@ -191,7 +191,7 @@
 @media (max-width: 767px) {
   .pic-container {
     width: auto;
-    padding: 0 24px;
+    padding: 0 24px 32px 24px;
     .pic-close {
       display: none;
     }
