feat: add context menu for big pic and lightbox

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -67,6 +67,9 @@ button:focus {
 }
 
 // notify
+.el-notification {
+  z-index: 20000 !important;
+}
 .el-notification__title {
   color: @color-text-primary;
   font-weight: 600;
@@ -168,3 +171,4 @@ button:focus {
 @import './form.less';
 @import './dialog.less';
 @import './tag.less';
+@import './context.less';
