fix: add background to lightbox

--- a/src/styles/pic/lightbox.less
+++ b/src/styles/pic/lightbox.less
@@ -14,6 +14,7 @@
   &-content {
     width: 100vw;
     box-shadow: 0 0 24px rgba(0, 0, 0, 0.15);
+    background: @color-accent;
   }
   &-content-landing {
     width: auto;
@@ -36,6 +37,7 @@
     &-content {
       width: calc(var(--vh, 1vh) * 100);
       transform: rotateZ(90deg);
+      background: lighten(@color-background-dark, 2.5%);
     }
     &-content-landing {
       width: 100vw;
