feat: load mini pic

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -47,6 +47,15 @@
       }
     }
   }
+  .pic-presentation-image__firstload {
+    overflow: hidden;
+    img {
+      filter: blur(1px);
+    }
+    .el-loading-mask {
+      opacity: 0.75;
+    }
+  }
   .pic-presentation-page {
     margin: 24px 0 32px 0;
     height: 20px;
