--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -11,6 +11,7 @@
 @import './common/back2top.less';
 @import './common/infinite.less';
 @import './common/notice.less';
+@import './common/downloadlist.less';
 
 /* Views */
 
