--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -66,27 +66,6 @@ button:focus {
   display: none;
 }
 
-// notify
-.el-notification {
-  z-index: 20000 !important;
-}
-.el-notification__title {
-  color: @color-text-primary;
-  font-weight: 600;
-	letter-spacing: 0.05em;
-}
-.el-notification__group {
-  margin-left: 7px;
-}
-.el-notification__closeBtn {
-  color: @color-text-primary;
-  transition: 100ms ease-in-out;
-}
-.el-notification__closeBtn:hover {
-  cursor: pointer;
-  color: lighten(@color-text-primary, 12.5%);
-}
-
 // dark mode
 .dark {
   background: @color-background-dark;
@@ -110,20 +89,6 @@ button:focus {
 	}
 	.el-message {
 		filter: brightness(0.8);
-	}
-	.el-notification {
-		background: lighten(@color-background-dark, 5%);
-		border: lighten(@color-background-dark, 2.5%);
-		box-shadow: 0 0 2px rgba(255, 255, 255, 0.05);
-	}
-	.el-notification__title {
-		color: darken(@color-text-primary, 5%);
-	}
-	.el-notification__closeBtn {
-		color: darken(@color-text-primary, 2.5%);
-	}
-	.el-notification__closeBtn:hover {
-		color: lighten(@color-text-primary, 2.5%);
 	}
   .el-popover {
     background: lighten(@color-background-dark, 5%);
@@ -153,12 +118,6 @@ button:focus {
   }
 }
 
-@media (max-width: 1024px) {
-  .el-dialog {
-    width: 90%;
-  }
-}
-
 @media (max-width: 767px) {
   .mobile-hide {
     display: none;
@@ -169,6 +128,8 @@ button:focus {
 }
 
 @import './form.less';
+@import './notification.less';
 @import './dialog.less';
 @import './tag.less';
 @import './context.less';
+@import './drawer.less';
