feat: announcement link

--- a/src/styles/basic/color.less
+++ b/src/styles/basic/color.less
@@ -5,7 +5,8 @@
 /* Text */
 @color-text-primary: @color-primary;
 @color-text-accent: #fafafa;
+@color-text-black: #606266;
 
 /* Background */
 @color-background-primary: @color-accent;
-@color-background-dark: #2e2e2e;
+@color-background-dark: #2e2e2e; 
