feat: new banner layout

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -66,6 +66,11 @@ button:focus {
   display: none;
 }
 
+.el-loading-text {
+  margin: 18px 0 !important;
+  font-size: 15px !important;
+}
+
 // dark mode
 .dark {
   background: @color-background-dark;
