feat: optimize landing parts styles

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -24,7 +24,7 @@
   span, a {
     color: @color-text-accent;
     letter-spacing: 0.1em;
-    text-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.125);
   }
   a {
     transition: 100ms ease;
