--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -12,7 +12,7 @@
 .rankbox {
   margin: auto;
   span, a {
-    text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.15);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.0875);
     color: @color-text-accent;
     font-size: 1.625rem;
     .no-select();
@@ -21,8 +21,9 @@
 		text-decoration: none;
 	}
   &-title {
-    padding: 0 0 1rem 0;
-    letter-spacing: 0.1em;
+    padding: 0 0 1.25rem 0;
+    letter-spacing: 0.5rem;
+    font-size: 1.25rem;
     text-align: center;
   }
   &-options {
