--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -15,7 +15,7 @@
     font-size: 1.625rem;
     letter-spacing: 0.1rem;
     color: @color-text-accent;
-    text-shadow: 0 0 8px rgba(0,0,0, .12);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.0875);
     .no-select();
   }
   &-input {
@@ -34,6 +34,7 @@
       font-size: 16px;
       font-weight: 600;
       letter-spacing: 0.05em;
+      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.0875);
     }
     input:focus {
       outline: none;
@@ -57,6 +58,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.0875);
       .no-select();
     }
     button:hover {
