feat: happy lunar new year

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -21,7 +21,7 @@
     &-content {
       width: 100%;
       border-radius: 26px;
-      background: #fff;
+      background: white;
       mix-blend-mode: screen;
       .landing-card {
         background: black;
@@ -75,7 +75,7 @@
 			background-color: darken(@color-primary, 3.75%);
       filter: brightness(0.875);
       &-content {
-        background: lighten(@color-background-dark, 2.75%);
+        background: lighten(@color-background-dark, 0.375%);
         mix-blend-mode: darken;
         .landing-card {
           background: white;
