feat: new landing bg

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -71,11 +71,12 @@
 // dark mode
 .dark {
   .landing-container {
+    filter: brightness(1.075);
     .landing {
 			background-color: darken(@color-primary, 3.75%);
       filter: brightness(0.875);
       &-content {
-        background: lighten(@color-background-dark, 0.375%);
+        background: lighten(@color-background-dark, 0.325%);
         mix-blend-mode: darken;
         .landing-card {
           background: white;
