feat: add mobile download

--- a/src/styles/common/qrpopup.less
+++ b/src/styles/common/qrpopup.less
@@ -1,4 +1,4 @@
-.wxdonate {
+.qrpopup {
   display: none;
   position: absolute;
   padding: 6px;
@@ -39,7 +39,7 @@
   }
 }
 
-.wxdonate::after {
+.qrpopup::after {
   width: 15px;
   height: 15px;
   background: #fff;
@@ -52,6 +52,6 @@
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.125);
 }
 
-#wxdonate-trigger:hover .wxdonate {
+.qrpopup-trigger:hover > .qrpopup {
   display: inline-block;
 }
