--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -12,6 +12,7 @@
 @import './common/infinite.less';
 @import './common/notice.less';
 @import './common/downloadlist.less';
+@import './common/qrpopup.less';
 
 /* Views */
 
