--- a/src/styles/pic/download.less
+++ b/src/styles/pic/download.less
@@ -23,10 +23,29 @@
 			justify-content: center;
 			color: @color-text-primary;
 			transition: 200ms;
+			margin-left: 8px;
 		}
 		&-icon:hover {
 			cursor: pointer;
 			color: lighten(@color-text-primary, 10%);
+			svg {
+				path {
+					fill: lighten(@color-text-primary, 10%);
+				}
+			}
+		}
+		.el-icon-setting {
+			transform: translateX(2px);
+		}
+		.icon-qrcode {
+			width: 26px;
+			height: 26px;
+			svg {
+				path {
+					transition: 200ms;
+					fill: @color-text-primary;
+				}
+			}
 		}
   }
   &-items {
@@ -75,6 +94,18 @@
 			}
 			&-icon:hover {
 				color: lighten(@color-text-primary, 2.5%);
+				svg {
+					path {
+						fill: lighten(@color-text-primary, 2.5%);
+					}
+				}
+			}
+			.icon-qrcode {
+				svg {
+					path {
+						fill: darken(@color-text-primary, 2.5%);
+					}
+				}
 			}
     }
     &-items {
@@ -146,3 +177,5 @@
 		}
 	}
 }
+
+@import './downloadqr.less';
