--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -125,7 +125,7 @@ button:focus {
 
 @media (max-width: 767px) {
   .mobile-hide {
-    display: none;
+    display: none !important;
   }
   .desktop-hide {
     display: inherit;
