fix: loading text position

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -18,6 +18,9 @@
     }
     .el-loading-mask {
       border-radius: 0 0 16px 16px;
+      .el-loading-spinner {
+        transform: translateY(-20%);
+      }
     }
     &-error {
       position: absolute;
