--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -6,6 +6,9 @@
   justify-content: center;
   & > .el-loading-mask {
     background-color: #fff !important;
+    .el-loading-spinner {
+      transform: translateY(-47.5%);
+    }
   }
   .pic-close {
     position: absolute;
