--- a/src/styles/artist/detail.less
+++ b/src/styles/artist/detail.less
@@ -1,7 +1,7 @@
 .artist-detail {
   width: 100%;
   .artist-overview {
-		width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         border-radius: 50%;
-        box-shadow: 0 4px 8px rgba(0,0,0, .175);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.175);
       }
     }
     &-content {
@@ -86,11 +86,11 @@
     pre::-webkit-scrollbar-track {
       background: @color-background-primary;
     }
-	}
-	.artist-comment-empty {
-		margin: 32px auto;
-		border-bottom: 1px @color-text-primary dashed;
-	}
+  }
+  .artist-comment-empty {
+    margin: 32px auto;
+    border-bottom: 1px @color-text-primary dashed;
+  }
 }
 
 // dark mode
@@ -127,7 +127,7 @@
 
 // mobile
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .artist-detail {
     &-content {
       &-name {
