--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -10,7 +10,8 @@ body {
   scroll-behavior: smooth;
   background: @color-background-primary;
   transition: background-color 200ms ease-in-out;
-  font-family: MicroSoft Yahei UI, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: MicroSoft Yahei UI, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @scrollbar-width: 8px;
@@ -74,7 +75,8 @@ button:focus {
 // dark mode
 .dark {
   background: @color-background-dark;
-  body, #app {
+  body,
+  #app {
     background: @color-background-dark;
   }
   body::-webkit-scrollbar-thumb {
@@ -91,18 +93,18 @@ button:focus {
       background: lighten(@color-background-dark, 10%);
       border-color: lighten(@color-background-dark, 10%);
     }
-	}
-	.el-message {
-		filter: brightness(0.8);
-	}
+  }
+  .el-message {
+    filter: brightness(0.8);
+  }
   .el-popover {
     background: lighten(@color-background-dark, 5%);
     border: 1px solid lighten(@color-background-dark, 7.5%);
   }
-  .el-popper[x-placement^=bottom] .popper__arrow {
+  .el-popper[x-placement^='bottom'] .popper__arrow {
     border-bottom-color: lighten(@color-background-dark, 7.5%);
   }
-  .el-popper[x-placement^=bottom] .popper__arrow::after {
+  .el-popper[x-placement^='bottom'] .popper__arrow::after {
     border-bottom-color: lighten(@color-background-dark, 7.5%);
   }
   .el-picker-panel {
