--- a/src/styles/basic/shadow.less
+++ b/src/styles/basic/shadow.less
@@ -1,2 +1,2 @@
-@shadow-small: 0 0 8px rgba(0,0,0,.175);
-@shadow-medium: 0 0 12px rgba(0,0,0,.12);
+@shadow-small: 0 0 8px rgba(0, 0, 0, 0.175);
+@shadow-medium: 0 0 12px rgba(0, 0, 0, 0.12);
