--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -11,15 +11,16 @@
 }
 .rankbox {
   margin: auto;
-  span, a {
+  span,
+  a {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     color: @color-text-accent;
     font-size: 1.625rem;
     .no-select();
-	}
-	a {
-		text-decoration: none;
-	}
+  }
+  a {
+    text-decoration: none;
+  }
   &-title {
     padding: 0 0 1.25rem 0;
     letter-spacing: 0.5rem;
@@ -64,7 +65,8 @@
     height: 21rem;
   }
   .rankbox {
-    span, a {
+    span,
+    a {
       font-size: 2.5rem;
     }
     &-title {
@@ -90,7 +92,8 @@
 
 @media (max-width: 767px) {
   .rankbox {
-    span, a {
+    span,
+    a {
       font-size: 24px;
     }
     &-options {
