--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -26,7 +26,7 @@
     }
     input {
       font-size: 1.125rem;
-      background: rgba(255,255,255, 0.75);
+      background: rgba(255, 255, 255, 0.75);
       color: @color-text-primary;
       text-align: center;
       transition: 50ms;
@@ -75,7 +75,7 @@
 
 // 2k
 
-@media(min-height: 1200px) and (min-width: 1960px) {
+@media (min-height: 1200px) and (min-width: 1960px) {
   .searchbox-wrapper {
     height: 22rem;
   }
@@ -88,7 +88,7 @@
   }
 }
 
-@media(max-height: 754px) {
+@media (max-height: 754px) {
   .searchbox-wrapper {
     width: 100%;
     height: 240px;
@@ -108,7 +108,7 @@
 
 /* Mobile */
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .searchbox {
     padding: 24px 8px;
     &-title {
