--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -64,7 +64,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 28px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   z-index: 9999;
   background: @color-accent;
   opacity: 0;
@@ -136,14 +136,14 @@
 }
 
 /* Responsive */
-@media(max-width: 1680px) {
+@media (max-width: 1680px) {
   .pic {
     &-side {
       margin-left: 36px;
     }
   }
 }
-@media(max-width: 1430px) {
+@media (max-width: 1430px) {
   .pic {
     &-side {
       margin-left: 32px;
@@ -157,7 +157,7 @@
     }
   }
 }
-@media(max-width: 1024px) {
+@media (max-width: 1024px) {
   .pic {
     &-side {
       padding-top: 18px;
