--- a/src/styles/basic/form.less
+++ b/src/styles/basic/form.less
@@ -11,7 +11,7 @@
       input {
         color: @color-text-primary;
         border-radius: 8px;
-        box-shadow: 2px 2px 8px rgba(0, 0, 0, .02);
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.02);
       }
       input:hover {
         border: 1px solid lighten(@color-text-primary, 15%);
