--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -3,152 +3,153 @@
 @image-card-corner: 16px;
 
 .image-card-wrapper {
-    width: max-content;
-    height: max-content;
+  width: max-content;
+  height: max-content;
 }
 
 .image-card {
-    display: block;
-    width: @image-card-width;
-    margin: @image-card-margin;
-    position: relative;
+  display: block;
+  width: @image-card-width;
+  margin: @image-card-margin;
+  position: relative;
+  border-radius: @image-card-corner;
+  box-shadow: @shadow-small;
+  .el-loading-mask {
     border-radius: @image-card-corner;
-    box-shadow: @shadow-small;
-    .el-loading-mask {
-        border-radius: @image-card-corner;
-        z-index: 999;
+    z-index: 999;
+  }
+  &-image {
+    width: 100%;
+    height: 100%;
+    border-radius: @image-card-corner;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: filter 200ms ease-in-out;
+    position: relative;
+    z-index: 10;
+  }
+  &-image:hover {
+    cursor: pointer;
+    filter: brightness(0.875);
+  }
+  &-title {
+    width: calc(100% - 32px);
+    height: 48px;
+    background: rgba(0, 0, 0, 0.25);
+    position: absolute;
+    bottom: 0;
+    border-radius: 0 0 @image-card-corner @image-card-corner;
+    padding: 0 16px;
+    font-weight: 600;
+    letter-spacing: 0.025rem;
+    color: @color-text-accent;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 48px;
+    z-index: 10;
+    .no-select();
+  }
+  &-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: @image-card-corner;
+    background: lighten(@color-primary, 25%);
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    span,
+    i {
+      .no-select();
     }
-    &-image {
-        width: 100%;
-        height: 100%;
-        border-radius: @image-card-corner;
-        background-repeat: no-repeat;
-        background-size: cover;
-        transition: filter 200ms ease-in-out;
-        position: relative;
-        z-index: 10;
+    &-icon {
+      color: @color-text-primary;
+      font-size: 40px;
+      margin-bottom: 8px;
     }
-    &-image:hover {
-        cursor: pointer;
-        filter: brightness(0.875);
+    &-tip {
+      color: @color-text-primary;
+      font-size: 22px;
+      font-weight: 600;
+      margin-bottom: 8px;
     }
-    &-title {
-        width: calc(100% - 32px);
-        height: 48px;
-        background: rgba(0,0,0, .25);
-        position: absolute;
-        bottom: 0;
-        border-radius: 0 0 @image-card-corner @image-card-corner;
-        padding: 0 16px;
-        font-weight: 600;
-        letter-spacing: 0.025rem;
-        color: @color-text-accent;
-        text-shadow: 0 0 6px rgba(0,0,0, .15);
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-        line-height: 48px;
-        z-index: 10;
-        .no-select();
+    &-tip-xs {
+      margin-bottom: 0;
     }
-    &-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: @image-card-corner;
-        background: lighten(@color-primary, 25%);
-        z-index: 999;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        span, i {
-            .no-select();
-        }
-        &-icon {
-            color: @color-text-primary;
-            font-size: 40px;
-            margin-bottom: 8px;
-        }
-        &-tip {
-            color: @color-text-primary;
-            font-size: 22px;
-            font-weight: 600;
-            margin-bottom: 8px;
-        }
-        &-tip-xs {
-            margin-bottom: 0;
-        }
+  }
+  &-count {
+    background: rgba(0, 0, 0, 0.375);
+    width: max-content;
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 8px;
+    height: 32px;
+    display: flex;
+    padding: 0 6px;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+    .no-select();
+    img {
+      width: 18px;
+      height: 18px;
+      margin-right: 4px;
     }
-    &-count {
-        background: rgba(0,0,0, .375);
-        width: max-content;
-        position: absolute;
-        top: 12px;
-        right: 12px;
-        border-radius: 8px;
-        height: 32px;
-        display: flex;
-        padding: 0 6px;
-        align-items: center;
-        justify-content: center;
-        z-index: 100;
-        .no-select();
-        img {
-            width: 18px;
-            height: 18px;
-            margin-right: 4px;
-        }
-        span {
-            color: @color-text-accent;
-            font-size: 14px;
-            font-weight: 600;
-            letter-spacing: 0.05em;
-        }
+    span {
+      color: @color-text-accent;
+      font-size: 14px;
+      font-weight: 600;
+      letter-spacing: 0.05em;
     }
+  }
 }
 
 .image-card-fade {
-    animation: cardFadeIn 500ms;
+  animation: cardFadeIn 500ms;
 }
 
 // dark mode
 .dark {
-    .image-card {
-        filter: brightness(0.8);
-    }
+  .image-card {
+    filter: brightness(0.8);
+  }
 }
 
 /* Mobile */
-@media(max-width: 767px) {
-    .image-card {
-        &-title {
-            height: 42px;
-            line-height: 42px;
-            font-size: 14px;
-        }
-        &-overlay {
-            &-icon {
-                font-size: 36px;
-            }
-            &-tip {
-                font-size: 18px;
-            }
-        }
+@media (max-width: 767px) {
+  .image-card {
+    &-title {
+      height: 42px;
+      line-height: 42px;
+      font-size: 14px;
     }
+    &-overlay {
+      &-icon {
+        font-size: 36px;
+      }
+      &-tip {
+        font-size: 18px;
+      }
+    }
+  }
 }
 
-@media(max-width: 667px) {
-    .image-card {
-        &-overlay {
-            &-icon {
-                font-size: 32px;
-            }
-            &-tip {
-                font-size: 16px;
-            }
-        }
+@media (max-width: 667px) {
+  .image-card {
+    &-overlay {
+      &-icon {
+        font-size: 32px;
+      }
+      &-tip {
+        font-size: 16px;
+      }
     }
+  }
 }
