--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -21,7 +21,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  span, a {
+  span,
+  a {
     color: @color-text-accent;
     letter-spacing: 0.1em;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.25);
@@ -122,7 +123,7 @@
 
 // 2k
 
-@media(min-height: 1200px) and (min-width: 1960px) {
+@media (min-height: 1200px) and (min-width: 1960px) {
   .banner-wrapper {
     height: 68.5rem;
     max-height: 22rem;
@@ -256,7 +257,7 @@
 }
 
 // iPhone SE
-@media(max-width: 320px) and (max-height: 568px) {
+@media (max-width: 320px) and (max-height: 568px) {
   .banner-wrapper {
     max-height: 182px;
   }
