--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -4,14 +4,14 @@
   .landing {
     width: 100%;
     margin: 0 auto;
-		max-width: 75rem;
+    max-width: 75rem;
     position: relative;
     display: block;
     border-radius: 24px;
     background-color: lighten(@color-primary, 5%);
     background-position: top center;
-		background-repeat: no-repeat;
-		background-size: 1680px auto;
+    background-repeat: no-repeat;
+    background-size: 1680px auto;
     transition: background-color 0.5s ease-in-out, background-size 0.5s ease-in-out;
     filter: brightness(0.98);
     .landing-card {
@@ -54,26 +54,26 @@
   }
 }
 
-@media only screen and (max-aspect-ratio: ~"1/1") {
-	.landing-container {
-		.landing {
-			background-size: auto 960px;
-		}
-	}
-	@media (max-width: 767px) {
-		.landing-container {
-			.landing {
-				background-size: auto 800px;
-			}
-		}
-	}
+@media only screen and (max-aspect-ratio: ~'1/1') {
+  .landing-container {
+    .landing {
+      background-size: auto 960px;
+    }
+  }
+  @media (max-width: 767px) {
+    .landing-container {
+      .landing {
+        background-size: auto 800px;
+      }
+    }
+  }
 }
 
 // dark mode
 .dark {
   .landing-container {
     .landing {
-			background-color: darken(@color-primary, 3.75%);
+      background-color: darken(@color-primary, 3.75%);
       filter: brightness(0.875);
       &-content {
         background: lighten(@color-background-dark, 0.325%);
@@ -88,17 +88,17 @@
 
 // 2k
 
-@media(min-height: 1200px) and (min-width: 1960px) {
+@media (min-height: 1200px) and (min-width: 1960px) {
   .landing-container {
     padding: 3.5rem 8rem;
     .landing {
-			max-width: 98rem;
+      max-width: 98rem;
     }
   }
 }
 
 // tablet
-@media(max-width: 1024px) {
+@media (max-width: 1024px) {
   .landing-announcement {
     .el-dialog {
       width: 75vw;
@@ -107,9 +107,9 @@
 }
 
 // mobile
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .landing-container {
-		padding: 20px;
+    padding: 20px;
   }
   .landing-announcement {
     .el-dialog {
@@ -118,9 +118,9 @@
   }
 }
 
-@media(max-width: 320px) and (max-height: 568px) {
+@media (max-width: 320px) and (max-height: 568px) {
   .landing-container {
-		padding: 16px;
+    padding: 16px;
   }
 }
 
