fix: notification width

--- a/src/styles/basic/notification.less
+++ b/src/styles/basic/notification.less
@@ -1,5 +1,9 @@
 .el-notification {
+  width: max-content;
+  max-width: 320px;
+  padding: 14px 32px 14px 12px;
   z-index: 20000 !important;
+  .no-select();
 }
 .el-notification__title {
   color: @color-text-primary;
