--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -40,6 +40,7 @@
     bottom: 0;
     border-radius: 0 0 @image-card-corner @image-card-corner;
     padding: 0 16px;
+    font-size: 16px;
     font-weight: 600;
     letter-spacing: 0.025rem;
     color: @color-text-accent;
