--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -42,11 +42,11 @@
     .no-select();
   }
   &-title-up {
-    transform: translateY(-272px);
+    transform: translateY(-17rem);
   }
   .about {
     position: absolute;
-    bottom: 100px;
+    bottom: 6.25rem;
     opacity: 0;
     transition: all 500ms ease-in-out;
     &-my {
@@ -54,22 +54,22 @@
       position: relative;
       &-title {
         text-align: center;
-        font-size: 28px;
-        line-height: 62px;
+        font-size: 1.75rem;
+        line-height: 3.875rem;
         .indev {
-          font-size: 14px;
+          font-size: 0.875rem;
           position: absolute;
           letter-spacing: 0;
-          margin-left: -6px;
-          padding-top: 6px;
+          margin-left: -0.375rem;
+          padding-top: 0.375rem;
         }
       }
       &-link {
-        font-size: 22px;
+        font-size: 1.375rem;
         text-align: center;
-        line-height: 48px;
+        line-height: 3rem;
         a {
-          margin-right: 24px;
+          margin-right: 1.5rem;
         }
       }
       &-link {
@@ -83,8 +83,8 @@
       .no-select();
       &-title {
         text-align: center;
-        font-size: 28px;
-        line-height: 80px;
+        font-size: 1.75rem;
+        line-height: 5rem;
       }
       &-switch {
         display: flex;
@@ -92,8 +92,8 @@
         justify-content: center;
         margin-bottom: 1.5rem;
         span {
-          font-size: 18px;
-          letter-spacing: 0.05em;
+          font-size: 1.125rem;
+          letter-spacing: 0.05rem;
           font-weight: 400;
         }
       }
@@ -135,7 +135,7 @@
 
 // 2k
 
-@media (min-height: 1200px) and (min-width: 1960px) {
+@media (min-height: 1280px) and (min-width: 1960px) {
   .banner-wrapper {
     height: 68.5rem;
     max-height: 22rem;
@@ -234,20 +234,22 @@
       bottom: 42px;
       &-my {
         &-title {
-          font-size: 26px;
+          font-size: 22px;
+          line-height: 64px;
           .indev {
             font-size: 13px;
           }
         }
         &-link {
           font-size: 18px;
+          line-height: 36px;
         }
       }
       &-theme {
-        margin-top: 0;
+        margin-top: 12px;
         &-title {
           font-size: 22px;
-          line-height: 68px;
+          line-height: 64px;
         }
         &-switch {
           .el-switch {
@@ -258,7 +260,7 @@
         }
       }
       &-copyright {
-        margin-top: 58px;
+        margin-top: 60px;
         &-item {
           font-size: 14px;
         }
