feat: optimize searchbox style

--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -39,7 +39,7 @@
     input:focus {
       outline: none;
       border: #fff;
-      background: #f8f8f8;
+      background: rgba(255, 255, 255, 0.875);
     }
   }
   &-button {
